openfaas-functions/redis/300-service.yaml
# Service making Redis available in its own namespace
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: redis-server
spec:
  clusterIP: None
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-server
  type: ClusterIP
