openfaas-functions/redis/301-external-name.yaml
# Service making the previous service available in the openfaas-fn namespace
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: openfaas-fn
spec:
  type: ExternalName
  externalName: redis-server.redis-server.svc.cluster.local
  ports:
    - port: 6379
