openfaas-functions/redis/400-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redis-server
  namespace: redis-server

spec:
  routes:
    - match: Host(`redis.kube.local`)
      kind: Rule
      services:
        - name: redis-server
          port: 6379
